--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="description" content="There’s something powerful about walking into a home that feels clean, comfortable, and cared for. It’s more than just tidy floors and fresh countertops—the weight lifted off your shoulders when you don’t have to worry about chores piling up. That’s the peace of mind Clements Cleaning brings to families across Monroe County. Based in Waterloo, Illinois, and proudly serving the surrounding areas, we’re here to give homeowners a better way to manage life, without sacrificing weekends to a vacuum or scrubbing another bathtub." />
     <meta name="keywords" content="Cleaning Services Near Me, House Cleaners Near Me, House Cleaning Company Near Me" />
-    <meta property="og:title" content="Cleaning Services Near Me in Waterloo, IL" />
-    <title>Cleaning Services Near Me in Waterloo, IL</title>
+    <meta property="og:title" content="House Cleaners near Waterloo, IL" />
+    <title>House Cleaners near Waterloo, IL</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,7 +62,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Cleaning Services Near Me in Waterloo, IL</h1>
+        <h1>House Cleaners near Waterloo, IL</h1>
         <button onclick="window.location.href='tel:+116184103779'">Click Here to Call Us: 16184103779</button>
     </div>
 
